# backendtanyaunpra

./: .env  .env.example  .gitignore  .replit  DEPLOYMENT.md  FIREBASE_RAILWAY_FIX.md  GET_FIREBASE_CREDENTIALS.md  NAVIGATION_FEATURES.md  Procfile  RAILWAY_SETUP.md  app.py  application.py  gunicorn_config.py  pyproject.toml  railway.json  replit.md  wsgi.py
.local/state/replit/agent/: progress_tracker.md
.local/state/replit/agent/filesystem/: filesystem_state.json
app/config/: firebase_config.py
app/middleware/: analytics.py  auth.py
app/routes/: admin_routes.py  announcement_routes.py  chat_routes.py  knowledge_routes.py  schedule_routes.py
app/services/: analytics_service.py  announcement_service.py  cloudinary_service.py  gemini_service.py  knowledge_service.py  schedule_service.py  user_service.py
app/static/css/: admin.css
app/static/js/: admin.js  navigation.js
app/templates/: analytics.html  announcement.html  api_docs.html  base.html  dashboard.html  knowledge.html  landing.html  login.html  models.html  schedule.html  settings.html  testing.html  users.html
